--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(42-webserv)
 
 # set compiler flags and standard
 set(CMAKE_CXX_STANDARD 98)
-set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror")
+set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror -pedantic-errors")
 
 # set cmake output directory
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
