validator system + some implemented validators

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -1,7 +1,4 @@
-use_workers 1
-
-    # testing
-# another test
-server { # more tests
-    one two  three  five  # another test
-} # testing
+server {
+    host 1
+    port 1
+}
