pretty config errors

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -1,4 +1,18 @@
 server {
     host 1
-    port 1
+    port 2
+
+}
+
+server { # test
+#a asdfsf
+# asdfasdf
+
+    host 3
+    port 4 # comment
+
+    route {
+        location
+
+
 }
