--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -8,10 +8,18 @@ server { # test
 #a asdfsf
 # asdfasdf
 
-    host 3
-    port 4 # comment
+    host 1
+    port 1# comment
+    server_name 2135
+    error_page 500 file.txt
+    error_page 404 file2.txt
+
+    body_limit 42
 
     route {
         location
     }
 }
+
+use_workers 42
+
