--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -17,7 +17,9 @@ server { # test
     body_limit 42
 
     route {
-        location
+        location /hello
+        root    /hellohere
+        #proxy_url   https://oof.com
     }
 }
 
