--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -1,15 +1,9 @@
-server {
-    host 1
-    port 2
-
-}
-
 server { # test
 #a asdfsf
 # asdfasdf
 
     host 1
-    port 1# comment
+    port 8081# comment
     server_name 2135
     error_page 500 file.txt
     error_page 404 file2.txt
@@ -20,6 +14,8 @@ server { # test
         location /hello
         root    /hellohere
         #proxy_url   https://oof.com
+
+        directory_listing true
     }
 }
 
