--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(42-webserv)
 # set compiler flags and standard
 set(CMAKE_CXX_STANDARD 98)
 set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror -pedantic-errors")
+set(CMAKE_LINK_F)
 
 # set cmake output directory
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
@@ -23,4 +24,4 @@ include_directories(src)
 
 # create executable and link the library
 add_executable(not-apache ${SOURCE_FILES} ${HEADER_FILES})
-
+target_link_libraries(not-apache pthread)
