directory and file validators

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -12,7 +12,8 @@ server { # test
 
     route {
         location /hello
-        root    /hellohere
+        root    ../resources/test-root
+        cgi     ../resources/example-configs/basic.conf
         #proxy_url   https://oof.com
 
         directory_listing true
