--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -4,7 +4,7 @@ server { # test
 
     host 0.0.0.0
     port 8081 # comment
-    server_name 2135
+    server_name _
     error_page 500 file.txt
     error_page 404 file2.txt
 
