associated FD system + file serving

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -16,7 +16,7 @@ server { # test
         cgi     ../resources/example-configs/basic.conf
         #proxy_url   https://oof.com
 
-        directory_listing true
+        directory_listing false
     }
 }
 
