serving files. definitely a few issues left

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -20,4 +20,20 @@ server { # test
     }
 }
 
+server { # test
+#a asdfsf
+# asdfasdf
+
+    host 0.0.0.0
+    port 8080 # comment
+    server_name _
+
+    body_limit 0
+
+    route {
+        location /
+        root    ../resources/site
+    }
+}
+
 use_workers 42
