directory listing and index

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -11,7 +11,7 @@ server { # test
     body_limit 42
 
     route {
-        location /hello
+        location /.*
         root    ../resources/test-root
         cgi     ../resources/example-configs/basic.conf
         #proxy_url   https://oof.com
@@ -31,8 +31,10 @@ server { # test
     body_limit 0
 
     route {
-        location /
+        location /.*
+        index index.html
         root    ../resources/site
+        directory_listing true
     }
 }
 
