bunch of config stuff

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -26,7 +26,7 @@ server { # test
 
     host 0.0.0.0
     port 8081 # comment
-    server_name _
+    server_name localhost
 
     body_limit 0
 
@@ -34,7 +34,9 @@ server { # test
         location /.*
         index index.html
         root    ../resources/site
-        directory_listing true
+#         directory_listing true
+#         cgi ../resources/site/index.html
+#         cgi_ext .htm
     }
 }
 
