--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -34,7 +34,7 @@ server { # test
         location /.*
         index index.html
         root    ../resources/site
-#         directory_listing true
+        directory_listing true
 #         cgi ../resources/site/index.html
 #         cgi_ext .htm
     }
