mime types and uri parser

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -4,7 +4,7 @@ server { # test
 
     host 0.0.0.0
     port 8080 # comment
-    server_name _
+    server_name asdf
     error_page 500 file.txt
     error_page 404 file2.txt
 
@@ -14,6 +14,7 @@ server { # test
         location /.*
         root    ../resources/test-root
         cgi     ../resources/example-configs/basic.conf
+        cgi_ext .html
         #proxy_url   https://oof.com
 
         directory_listing false
@@ -31,6 +32,7 @@ server { # test
     body_limit 0
 
     route {
+        allowed_methods GET POST
         location /.*
         index index.html
         root    ../resources/site
