error page setting/thingies

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -5,8 +5,9 @@ server { # test
     host 0.0.0.0
     port 8080 # comment
     server_name asdf
-    error_page 500 file.txt
-    error_page 404 file2.txt
+    error_page 500 ../resources/errors/500.html
+    error_page 404 ../resources/errors/404.html
+    error_page 400 ../resources/errors/400.html
 
     body_limit 42
 
@@ -28,6 +29,9 @@ server { # test
     host 0.0.0.0
     port 8080 # comment
     server_name localhost
+    error_page 500 ../resources/errors/500.html
+    error_page 404 ../resources/errors/404.html
+    error_page 400 ../resources/errors/400.html
 
     body_limit 0
 
