--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -4,7 +4,7 @@ server { # test
 
     host 0.0.0.0
     port 8080 # comment
-    server_name asdf
+    server_name _
     error_page 500 ../resources/errors/500.html
     error_page 404 ../resources/errors/404.html
     error_page 400 ../resources/errors/400.html
@@ -28,7 +28,7 @@ server { # test
 
     host 0.0.0.0
     port 8080 # comment
-    server_name localhost
+    server_name _
     error_page 500 ../resources/errors/500.html
     error_page 404 ../resources/errors/404.html
     error_page 400 ../resources/errors/400.html
