--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -14,8 +14,8 @@ server { # test
     route {
         location /.*
         root    ../resources/test-root
-        cgi     ../resources/example-configs/basic.conf
-        cgi_ext .html
+        cgi     ../resources/test-root/env.cgi
+        cgi_ext world
         #proxy_url   https://oof.com
 
         directory_listing false
@@ -27,7 +27,7 @@ server { # test
 # asdfasdf
 
     host 0.0.0.0
-    port 8080 # comment
+    port 8081 # comment
     server_name _
     error_page 500 ../resources/errors/500.html
     error_page 404 ../resources/errors/404.html
@@ -47,3 +47,4 @@ server { # test
 }
 
 use_workers 42
+
