route validators (except proxy)

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -12,10 +12,13 @@ server { # test
     body_limit 42
 
     route {
+
+        use_plugin test
+
         location /.*
         root    ../resources/test-root
         cgi     ../resources/example-configs/basic.conf
-        cgi_ext .html
+        cgi_ext html
         #proxy_url   https://oof.com
 
         directory_listing false
