--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -13,6 +13,8 @@ server { # test
 
     route {
         location /.*
+		auth_basic “NotApache’s-Area”
+		auth_basic_user_file ../resources/test-root/.htpasswd
         root    ../resources/test-root
         cgi     ../resources/test-root/env.cgi
         cgi_ext world
