--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -4,7 +4,6 @@ server { # test
 
     host 0.0.0.0
     port 8080 # comment
-    server_name _
     error_page 500 ../resources/errors/500.html
     error_page 404 ../resources/errors/404.html
     error_page 400 ../resources/errors/400.html
@@ -13,10 +12,10 @@ server { # test
 
     route {
         location /.*
-        root    ../resources/test-root
-        cgi     ../resources/example-configs/basic.conf
-        cgi_ext .html
-        #proxy_url   https://oof.com
+#         root    ../resources/test-root
+#         cgi     ../resources/example-configs/basic.conf
+#         cgi_ext html
+        proxy_url   127.0.0.1
 
         directory_listing false
     }
@@ -28,7 +27,6 @@ server { # test
 
     host 0.0.0.0
     port 8081 # comment
-    server_name _
     error_page 500 ../resources/errors/500.html
     error_page 404 ../resources/errors/404.html
     error_page 400 ../resources/errors/400.html
