change config back

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -12,10 +12,10 @@ server { # test
 
     route {
         location /.*
-#         root    ../resources/test-root
-#         cgi     ../resources/example-configs/basic.conf
-#         cgi_ext html
-        proxy_url   127.0.0.1:8080
+        root    ../resources/test-root
+        cgi     ../resources/example-configs/basic.conf
+        cgi_ext html
+#         proxy_url   127.0.0.1:8080
 
         directory_listing false
     }
