--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -29,10 +29,11 @@ server { # test
     error_page 404 ../resources/errors/404.html
     error_page 400 ../resources/errors/400.html
 
-    body_limit 0
-
     route {
         location /.*
+
+        allowed_methods PUT DELETE GET POST
+
         index index.html
         root    ../resources/site
         directory_listing true
