upload directory it now being accounted for

--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -39,6 +39,7 @@ server { # test
         directory_listing true
 #         cgi ../resources/site/index.html
 #         cgi_ext .htm
+        save_uploads ../resources/uploads
     }
 }
 
