update provided tests

--- a/tests/provided/test.conf
+++ b/tests/provided/test.conf
@@ -4,7 +4,7 @@ server {
 
     # PUT test, serves /serve_me with cgi support and uploads to /uploads
     route {
-        location /put_test/.*
+        location /put_test/
         allowed_methods PUT DELETE
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
@@ -15,7 +15,7 @@ server {
 
     # POST test, serves /serve_me with cgi support
     route {
-        location /post_body/.*
+        location /post_body/
 
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
@@ -23,20 +23,19 @@ server {
         index index.html
     }
 
-    # file serving test, serves /directory with cgi support and indexing
+    # file serving test, serves /YoupiBanane with cgi support and indexing
     route {
-        location /directory.*
+        location /directory/
 
-        # TODO url rewriting
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
-        root ../tests/provided
+        root ../tests/provided/YoupiBanane
         index youpi.bad_extension
     }
 
     # GET test, serves /serve_me with index and cgi support
     route {
-        location /.*
+        location /
         allowed_methods GET
 
         cgi ../tests/provided/ubuntu_cgi_tester
