--- a/tests/cgi/cgi.conf
+++ b/tests/cgi/cgi.conf
@@ -1,23 +1,35 @@
-server {
-    port 8080
-
-    route {
-        location /.*
-        auth_basic				“NotApache’s-Area”
-		auth_basic_user_file	../tests/cgi/.htpasswd
-        root    ../tests/cgi/root
-        cgi     ../tests/cgi/env.cgi
-		cgi_ext world
-    }
-}
-
+# env test
 server {
 	port 8081
 
 	route {
-		location	/.*
+		location	/
 		root		../tests/cgi/root
 		cgi			../tests/cgi/env-ubuntu.cgi
+		cgi_ext		world
+	}
+}
+
+# provided cgi test
+server {
+	port 8082
+
+	route {
+		location	/
+		root		../tests/cgi/root
+		cgi			../tests/provided/ubuntu_cgi_tester
+		cgi_ext		world
+	}
+}
+
+# php test
+server {
+	port 8083
+
+	route {
+		location	/
+		root		../tests/cgi/root
+		cgi			/usr/bin/php-cgi
 		cgi_ext		world
 	}
 }
