--- a/tests/provided/test.conf
+++ b/tests/provided/test.conf
@@ -28,6 +28,7 @@ server {
         location /directory/
 
         cgi ../tests/provided/ubuntu_cgi_tester
+#         cgi /usr/bin/php-cgi
         cgi_ext bla
         root ../tests/provided/YoupiBanane
         index youpi.bad_extension
