--- a/resources/example-configs/basic.conf
+++ b/resources/example-configs/basic.conf
@@ -11,12 +11,8 @@ server { # test
 
     route {
         location /.*
-		auth_basic “NotApache’s-Area”
-		auth_basic_user_file ../resources/test-root/.htpasswd
-        root    ../resources/test-root
-        cgi     ../resources/example-configs/basic.conf
-        cgi_ext html
-#         proxy_url   127.0.0.1:8080
+        root    ../resources/site
+        index	index.html
 
         directory_listing false
     }
@@ -39,8 +35,6 @@ server { # test
         index index.html
         root    ../resources/site
         directory_listing true
-        #cgi ../resources/site/index.html
-#         cgi_ext .htm
         save_uploads ../resources/uploads
     }
 }
