auth without read + accept-language

--- a/resources/example-configs/cgi.conf
+++ b/resources/example-configs/cgi.conf
@@ -14,7 +14,8 @@ server { # test
     route {
         location /.*
 		auth_basic “NotApache’s-Area”
-		auth_basic_user_file ../resources/test-root/.htpasswd
+		authorized notapache:letmein maarten:test1 jelle:test2 primoz:test3
+		accept_language nl-NL nl en-US en
         root    ../resources/test-root
         cgi     ../resources/test-root/env.cgi
         cgi_ext world
