Body limit on route

--- a/tests/provided/test.conf
+++ b/tests/provided/test.conf
@@ -17,6 +17,7 @@ server {
     route {
         location /post_body/
 
+        body_limit 1000 # overwrite 100 bytes with a 1000
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
         root ../tests/provided/serve_me
