bunch of bug fixes to comply with provided tests

--- a/tests/provided/test.conf
+++ b/tests/provided/test.conf
@@ -1,6 +1,5 @@
 server {
     port 8080
-    body_limit 100 # body limit of 100 bytes
 
     # PUT test, serves /serve_me with cgi support and uploads to /uploads
     route {
@@ -17,7 +16,6 @@ server {
     route {
         location /post_body/
 
-        body_limit 1000 # overwrite 100 bytes with a 1000
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
         root ../tests/provided/serve_me
@@ -40,6 +38,7 @@ server {
         location /
         allowed_methods GET
 
+        body_limit 100 # body limit of 100 bytes for the rest of the requests
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
         root ../tests/provided/serve_me
