cgi 404 handling config option + better mutuallyexclusive validator

--- a/tests/provided/test.conf
+++ b/tests/provided/test.conf
@@ -16,6 +16,7 @@ server {
     route {
         location /post_body/
 
+        body_limit 100
         cgi ../tests/provided/ubuntu_cgi_tester
         cgi_ext bla
         root ../tests/provided/serve_me
@@ -29,6 +30,7 @@ server {
         cgi ../tests/provided/ubuntu_cgi_tester
 #         cgi /usr/bin/php-cgi
         cgi_ext bla
+        cgi_handle_invalid_file true # tester wants 404's to be handled by cgi
         root ../tests/provided/YoupiBanane
         index youpi.bad_extension
     }
