fixed makefile and cgi fix

--- a/tests/basic/basic.conf
+++ b/tests/basic/basic.conf
@@ -30,6 +30,7 @@ server {
         # TODO regex not matching
         location /cgi/
         root ../tests/basic/scripts
+        index index.hi
 
         # cgi executable to use
         cgi ../tests/cgi/env-ubuntu.cgi
