--- a/tests/basic/basic.conf
+++ b/tests/basic/basic.conf
@@ -27,8 +27,7 @@ server {
 
     route {
         # example regex will match for example /cgi, /icg, /iii. but not: /cgii, /c, /
-        # TODO regex not matching
-        location /cgi/
+        location /[cgi]{3,3}/
         root ../tests/basic/scripts
         index index.hi
 
