moved headers to _includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ file(GLOB_RECURSE HEADER_FILES
 	${CMAKE_SOURCE_DIR}/src/**.hpp)
 
 # set the include directory
-include_directories(src/includes)
+include_directories(src/_includes)
 include_directories(src)
 
 # create executable and link the library
