--- a/resources/example-configs/cgi.conf
+++ b/resources/example-configs/cgi.conf
@@ -16,9 +16,9 @@ server { # test
 		auth_basic “NotApache’s-Area”
 		authorized notapache:letmein maarten:test1 jelle:test2 primoz:test3
 		accept_language nl-NL nl en-US en
-        root    ../resources/test-root
-        cgi     ../resources/test-root/env.cgi
-        cgi_ext world
+        root    ../tests/cgi/root
+        cgi     /usr/local/bin/php-cgi
+        cgi_ext php
         #proxy_url   https://oof.com
 
         directory_listing false
