brainfuck embedded language and plugin

--- a/tests/embedded/embedded.conf
+++ b/tests/embedded/embedded.conf
@@ -3,7 +3,7 @@ server {
 
     route {
         location /
-        root ../tests/js/root
+        root ../tests/embedded/root
         index index.jsexec
     }
 }
