proper plugin parsing in routes and hooks

--- a/tests/embedded/embedded.conf
+++ b/tests/embedded/embedded.conf
@@ -5,5 +5,8 @@ server {
         location /
         root ../tests/embedded/root
         index index.jsexec
+
+        use_plugin js_executor
+        use_plugin brainfuck_executor
     }
 }
