--- a/unit-tests/datalist/makefile
+++ b/unit-tests/datalist/makefile
@@ -1,4 +1,4 @@
 test:
-	g++ -o test main.cpp -I ../../src/_includes ../../src/utils/DataList.cpp
+	g++ -g -o test main.cpp -I ../../src/_includes ../../src/utils/DataList.cpp
 	./test
 .PHONY: test
